fix: Fix responsive issues with ipad and iphone, and scroll spy (#11)
* fix home page background caption scaling incorrectly with smaller devices

* update email and move social media icon to stop it overlapping with return top arrow

* fix ipad and iphone rendering, scroll spy

--- a/assets/css/slideshowstyle.css
+++ b/assets/css/slideshowstyle.css
@@ -249,12 +249,6 @@
 	opacity: 1;
 }
 
-@media screen and (max-width: 1140px) { 
-    .cb-slideshow li div h3 { font-size: 140px }
-}
-@media screen and (max-width: 600px) { 
-    .cb-slideshow li div h3 { font-size: 80px }
-}
 
 #backgroundimg {
     text-align: center;
